<resources>
    <string name="app_name">Xels Android wallet</string>
    <string name="choose_a_wallet">Choose a wallet</string>
    <string name="decrypt">Decrypt</string>
    <string name="available_balance">Available Balance</string>
    <string name="from">From:</string>
    <string name="amount_available">Amount available</string>
    <string name="amount">Amount</string>
    <string name="destination_address">Destination address</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="please_enter_a_valid_fee">Please enter a valid amount
        and destination address to calculate the fee.
    </string>
    <string name="please_enter_your_wallet_password">Please enter your wallet password.</string>
    <string name="please_enter_the_destination_address_here">Please enter the destination address here.</string>
    <string name="_0_00_xels">0.00 Xels</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="latest_transaction">History</string>
    <string name="show_all_addresses">Show all addresses</string>
    <string name="ok">OK</string>
    <string name="restore_a_wallet">Restore wallet</string>
    <string name="login">Log In</string>
    <string name="name">Name</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="earliest_possible_creation_date">Earliest Possible Creation Date</string>
    <string name="secret_words">Secret Words</string>
    <string name="password">Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_your_secret_word">Enter your secret word</string>
    <string name="select_the_date_your_wallet_was_created">Select the date your wallet was created</string>
    <string name="enter_a_wallet_name">Enter a wallet name</string>
    <string name="restore">Restore</string>
    <string name="enter_your_secret_words">Enter your secret words</string>
    <string name="you_have_no_transection_history">You have no transection history</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_password_will_be_required">Your password will be required to recover \nyour wallet in the future.
        Keep it safe.</string>
    <string name="create_new_wallet">Create a new wallet</string>
    <string name="create_wallet">Create A Wallet</string>
    <string name="word_number_4">Word number 4</string>
    <string name="word_number_8">Word number 8</string>
    <string name="word_number_12">Word number 12</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_words">Confirm Words</string>
    <string name="wallet_created">Wallet Created</string>
    <string name="your_wallet_has_been_created">Your wallet has been created. Keep your secret words and password
        safe!</string>
    <string name="please_write_down_your_secret_words_and_password">Please write down your secret words and password.
        You will need both to recover youur wallet in your future.</string>
    <string name="warning">Warning !</string>
    <string name="create">Create</string>
    <string name="mnemonics">Mnemonics</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_you_password">Enter you password</string>
    <string name="enter_word_4th_from_mnemonics">Enter word 4th from mnemonics</string>
    <string name="enter_word_8th_from_mnemonics">Enter word 8th from mnemonics</string>
    <string name="enter_word_12th_from_mnemonics">Enter word 12th from mnemonics</string>
    <string name="create_a_wallet">Create a wallet</string>
    <string name="used">Used</string>
    <string name="unused">Unused</string>
    <string name="changed">Changed</string>
    <string name="copy">Copy</string>
    <string name="qr_code">QR code</string>
    <string name="share">Share</string>
    <string name="you_have_no_address_yet">You have no address yet!</string>
    <string name="passphrase">Passphrase</string>
    <string name="enter_a_passphrase">Enter a passphrase</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
</resources>
