<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/whiteColor"
              android:id="@+id/linearLayout">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-10dp"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
        >

            <TextView
                    android:id="@+id/text_screen_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/mnemonics"
                    android:gravity="center"
                    android:textColor="@color/whiteColor"
            />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginRight="@dimen/layout_margin_left"
            android:background="@drawable/mnemonics_text_backgound"
            android:layout_marginTop="@dimen/wallet_margin_top"

    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/mnemonic_text_margin"
                  android:layout_marginLeft="@dimen/layout_margin"
                  android:layout_marginBottom="@dimen/warning_margin_bottom"
                  android:text="@string/warning"
                  android:textSize="@dimen/text_size"
                  android:textColor="@color/blackColor"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/layout_margin"
                  android:layout_marginRight="@dimen/layout_margin"
                  android:layout_marginBottom="@dimen/mnemonic_text_margin"
                  android:text="@string/please_write_down_your_secret_words_and_password"
                  android:textSize="@dimen/text_size_small"/>
    </LinearLayout>
    <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gridview_margin"
            android:numColumns="3"
            android:verticalSpacing="@dimen/gridview_space"
            android:stretchMode="columnWidth"

    />


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/copy_to_clipboard"
              android:id="@+id/copy_to_clipboard"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="30dp"/>


    <Button
            android:id="@+id/btn_create_wallet"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/edittext_height"
            android:layout_gravity="center"
            android:text="@string/create_new_wallet"
            android:textColor="@color/whiteColor"
            android:textAllCaps="false"
            android:background="@drawable/login_btn_background"
    />
    <include layout="@layout/boottombar"/>
</LinearLayout>